--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -38,6 +38,10 @@
         </thead>
         <tbody>
             <tr>
+              <td>May 2020</a></td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_May_2020.pdf') }}" target="_blank">The Hexagon May 2020</a></td>
+            </tr>
+            <tr>
                 <td>April 2020</a></td>
                 <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_April_2020.pdf') }}" target="_blank">The Hexagon April 2020</a></td>
             </tr>
