--- a/templates/vue.html
+++ b/templates/vue.html
@@ -1,240 +1,322 @@
-{% extends 'layout.html' %}
-
-
-{% block content %}
-  <!-- SHOWCASE -->
-  <section id="showcase">
-
-    <div class="primary-overlay text-white">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center mt-5">
-            <h1 class="display-3 mt-5 pt-1 top-spacing" style="font-family:Montserrat;">
-              Let's learn Vue together
-            </h1>
-           </div>
-         </div>
-      </div>    
+{% extends 'layout.html' %} {% block content %}
+<!-- SHOWCASE -->
+<section id="showcase">
+  <div class="primary-overlay text-white">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center mt-5">
+          <h1
+            class="display-3 mt-5 pt-1 top-spacing"
+            style="font-family: Montserrat;"
+          >
+            Let's learn Vue together
+          </h1>
+        </div>
+      </div>
     </div>
-
-  </section>
-
-  <br/>
-  <div class="text-center">
-    <h6></h6><img src="{{ url_for('static', filename='img/vue.svg') }}" width="300px" class="mb-2 img-fluid">
   </div>
+</section>
 
-  <br/>
-  <div class="text-center">
-    <h1>
-       Training Details
-    </h1>
-  </div>
-  <p style = "margin: 30px">
-  </p>
+<br />
+<div class="text-center">
+  <h6></h6>
+  <img
+    src="{{ url_for('static', filename='img/vue.svg') }}"
+    width="300px"
+    class="mb-2 img-fluid"
+  />
+</div>
 
-  <table style="margin-left: 20px" id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
-    <tbody>
-        <tr>
-          <td>Why Vue?</td>
-          <td>Vue.js is a progressive JavaScript framework that allows you to create compelling user interfaces efficiently and easily. 
-          </td>
-        </tr>
-        <tr>
-          <td>Vue and its Founder</td>
-          <td>
-            <a href="https://youtu.be/OrxmtDw4pVI" target="_blank">
-              A short documentary
-            </a> 
-          </td>
-        </tr>
-        <tr>
-          <td>Vue vs React vs Angular</td>
-          <td>
-            <a href="https://trends.google.com/trends/explore?cat=733&date=today%205-y&q=React,Vue,Angular" target="_blank">
-              Google Trends
-            </a> 
-          </td>
-        </tr>
-        <tr>
-          <td>Class Start Date</td>
-          <td>1st June 2020</td>
-        </tr>
-        <tr>
-          <td>Intake</td>
-          <td>Unlimited</td>
-        </tr>
-        <tr>
-          <td>Target Audience</td>
-          <td>Beginner developers who understand HTML, CSS and JavaScript at a basic level.</td>
-        </tr>
-        <tr>
-          <td>Pace</td>
-          <td>We will attempt to finish at least two lessons a day but may adjust if needed.</td>
-        </tr>
-        <tr>
-          <td>Fee</td>
-          <td>We will use 
-            <a href="https://www.vuemastery.com/courses-path/beginner" target="_blank">
-              Beginner path of Vue Mastery,
-            </a> 
-             The first course is free. Our immediate focus is just around this first course.
-             Once finished, we will all then decide if it is worth subscribing to unlock next courses. 
-             Please be advised that Code.Sydney is not affiliated to Vue Mastery.
-          </td>
-        </tr>
-        <tr>
-          <td>Slack</td>
-          <td>
-            <a href="https://join.slack.com/t/codesydney/shared_invite/enQtMzA4ODcyOTUyMDY0LTFlZDAyZjgwZmIzY2VmMzA0MjllOWI3YmE1NGZiNzQ5NGNmNjlhMGE5MTE1ZDA2NTU2OGRkZWQyYTQ3NDZmZGM" target="_blank">Link to Code.Sydney's Slack Channel</a>
-          </td>
-        </tr>
-    </tbody>
+<br />
+<div class="text-center">
+  <h1>
+    Training Details
+  </h1>
+</div>
+<p style="margin: 30px;"></p>
+
+<table
+  style="margin-left: 20px;"
+  id="example"
+  class="table table-striped table-bordered"
+  cellspacing="0"
+  width="100%"
+>
+  <tbody>
+    <tr>
+      <td>Why Vue?</td>
+      <td>
+        Vue.js is a progressive JavaScript framework that allows you to create
+        compelling user interfaces efficiently and easily.
+      </td>
+    </tr>
+    <tr>
+      <td>Vue and its Founder</td>
+      <td>
+        <a href="https://youtu.be/OrxmtDw4pVI" target="_blank">
+          A short documentary
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>Vue vs React vs Angular</td>
+      <td>
+        <a
+          href="https://trends.google.com/trends/explore?cat=733&date=today%205-y&q=React,Vue,Angular"
+          target="_blank"
+        >
+          Google Trends
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>Class Start Date</td>
+      <td>1st June 2020</td>
+    </tr>
+    <tr>
+      <td>Intake</td>
+      <td>Unlimited</td>
+    </tr>
+    <tr>
+      <td>Target Audience</td>
+      <td>
+        Beginner developers who understand HTML, CSS and JavaScript at a basic
+        level.
+      </td>
+    </tr>
+    <tr>
+      <td>Pace</td>
+      <td>
+        We will attempt to finish at least two lessons a day but may adjust if
+        needed.
+      </td>
+    </tr>
+    <tr>
+      <td>Fee</td>
+      <td>
+        We will use
+        <a
+          href="https://www.vuemastery.com/courses-path/beginner"
+          target="_blank"
+        >
+          Beginner path of Vue Mastery,
+        </a>
+        The first course is free. Our immediate focus is just around this first
+        course. Once finished, we will all then decide if it is worth
+        subscribing to unlock next courses. Please be advised that Code.Sydney
+        is not affiliated to Vue Mastery.
+      </td>
+    </tr>
+    <tr>
+      <td>Slack</td>
+      <td>
+        <a
+          href="https://join.slack.com/t/codesydney/shared_invite/enQtMzA4ODcyOTUyMDY0LTFlZDAyZjgwZmIzY2VmMzA0MjllOWI3YmE1NGZiNzQ5NGNmNjlhMGE5MTE1ZDA2NTU2OGRkZWQyYTQ3NDZmZGM"
+          target="_blank"
+          >Link to Code.Sydney's Slack Channel</a
+        >
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <p></p>
 <p></p>
 
-<br/>
+<br />
 <div class="text-center">
   <p></p>
   <p></p>
 
   <h1>
-     Training Materials and Training Approach
+    Training Materials and Training Approach
   </h1>
 </div>
-<p style = "margin: 30px">
-</p>
+<p style="margin: 30px;"></p>
 
-<p style = "margin: 30px">We will follow the
+<p style="margin: 30px;">
+  We will follow the
   <a href="https://www.vuemastery.com/courses-path/beginner" target="_blank">
-    Beginner path of Vue Mastery. 
-  </a> We will primarily collaborate in slack and hold regular 40-min Sunday catch ups at 11 am over Zoom to share our progress and any roadblocks along the way.
+    Beginner path of Vue Mastery.
+  </a>
+  We will primarily collaborate in slack and hold regular 40-min Sunday catch
+  ups at 11 am over Zoom to share our progress and any roadblocks along the way.
 </p>
-      
- <p></p>
- <p></p>
 
- <br/>
- <div class="text-center">
-   <h1>
-      Instructors
-   </h1>
- </div>
- 
-  <div class="spacing"></div>    
+<p></p>
+<p></p>
 
-  <section id="authors" class="my-5 text-center bg-light">
+<br />
+<div class="text-center">
+  <h1>
+    Instructors
+  </h1>
+</div>
 
-    <div class="container">
-      <div class="row">
+<div class="spacing"></div>
 
-        <div class="col-lg-3 col-md-6">
-          <div class="card h-100">
-            <div class="card-body">
-              <img src="{{ url_for('static', filename='img/kevin.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
-              <h4>Kevin Foong</h4>
-              <h5 class="text-muted">Instructor</h5>
-              <p class="team-text">
-                Kevin has over 20 years of working experience in a variety of IT related areas including software development, 
-                web design and information management. The latter in the area of library and information science. 
-                He is currently working as a System Administrator for NSW Health where he mainly utilises SQL for report generation. 
-                He has, in the past few years, been refreshing his skills in the area of web development using technologies such as CSS, Python, Flask, Javascript and VueJS. He is interested in sharing his knowledge and learning from others.</p>
-              <div class="d-flex justify-content-center">
-                <div class="p-4">
-                  <a href="https://www.linkedin.com/in/kevin-foong-044794/" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                </div>
+<section id="authors" class="my-5 text-center bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-6">
+        <div class="card h-100">
+          <div class="card-body">
+            <img
+              src="{{ url_for('static', filename='img/kevin.png') }}"
+              alt=""
+              class="img-fluid rounded-circle w-50 mb-3"
+            />
+            <h4>Kevin Foong</h4>
+            <h5 class="text-muted">Instructor</h5>
+            <p class="team-text">
+              Kevin has over 20 years of working experience in a variety of IT
+              related areas including software development, web design and
+              information management. The latter in the area of library and
+              information science. He is currently working as a System
+              Administrator for NSW Health where he mainly utilises SQL for
+              report generation. He has, in the past few years, been refreshing
+              his skills in the area of web development using technologies such
+              as CSS, Python, Flask, Javascript and VueJS. He is interested in
+              sharing his knowledge and learning from others.
+            </p>
+            <div class="d-flex justify-content-center">
+              <div class="p-4">
+                <a
+                  href="https://www.linkedin.com/in/kevin-foong-044794/"
+                  target="_blank"
+                >
+                  <i class="fab fa-linkedin"></i>
+                </a>
               </div>
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="col-lg-3 col-md-6">
-          <div class="card h-100">
-            <div class="card-body">
-              <img src="{{ url_for('static', filename='img/paul.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
-              <h4>Paul Kang</h4>
-              <h5 class="text-muted">Instructor</h5>
-              <p class="team-text">
-                Paul has over 15 years of commercial experience, currently working as a Cloud Technical Architect with experiences using platforms such as AWS, Azure and Salesforce.
-Partially works as a Full stack developer particularly focusing on Mobile and Ecommerce related platforms such as Shopify, using Vue, NuxtJS, GraphQL, FastAPI, Python and Flutter.
-Passionate about exploring practical use cases of AR/VR/XR other than Gaming.
-Always conscious of online security, emerging trends of technology and machine learning becoming more commoditised for developers to use in their Apps.
-                </p>
-              <div class="d-flex justify-content-center">
-                <div class="p-4">
-                  <a href="https://www.linkedin.com/in/paul-t-kang" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="card h-100">
+          <div class="card-body">
+            <img
+              src="{{ url_for('static', filename='img/paul.png') }}"
+              alt=""
+              class="img-fluid rounded-circle w-50 mb-3"
+            />
+            <h4>Paul Kang</h4>
+            <h5 class="text-muted">Instructor</h5>
+            <p class="team-text">
+              Paul has over 15 years of commercial experience, currently working
+              as a Cloud Technical Architect with experiences using platforms
+              such as AWS, Azure and Salesforce. Partially works as a Full stack
+              developer particularly focusing on Mobile and Ecommerce related
+              platforms such as Shopify, using Vue, NuxtJS, GraphQL, FastAPI,
+              Python and Flutter. Passionate about exploring practical use cases
+              of AR/VR/XR other than Gaming. Always conscious of online
+              security, emerging trends of technology and machine learning
+              becoming more commoditised for developers to use in their Apps.
+            </p>
+            <div class="d-flex justify-content-center">
+              <div class="p-4">
+                <a
+                  href="https://www.linkedin.com/in/paul-t-kang"
+                  target="_blank"
+                >
+                  <i class="fab fa-linkedin"></i>
+                </a>
               </div>
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="col-lg-3 col-md-6">
-          <div class="card h-100">
-            <div class="card-body">
-              <img src="{{ url_for('static', filename='img/promie_new.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
-              <h4>Promie Yutasane</h4>
-              <h5 class="text-muted">Instructor/Facilitator</h5>
-              <p class="team-text">Promie is currently working as a Software Engineer at Hireup, a tech company with an online platform that connects people with disability with support workers. 
-                He has a very strong focus on full stack development and currently using NodeJS, MongoDB, GraphQL/Apollo, React and Vue. 
-                He is a part-time student at UNSW studying Masters of IT specialising in Artificial Intelligence and E-Commerce Systems. 
-                Promie spends his spare time mentoring new programmers at Code.Sydney. As one of the pioneer mentors, 
-                Promie has introduced standardised processes around GitHub code submission among developers. He is also the chief evangelist of Vue JS in Code.Sydney.   
-              </p>
-              <div class="d-flex justify-content-center">
-                <div class="p-4">
-                  <a href="https://www.linkedin.com/in/promie-yutasane-74a024140/" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="card h-100">
+          <div class="card-body">
+            <img
+              src="{{ url_for('static', filename='img/promie_new.png') }}"
+              alt=""
+              class="img-fluid rounded-circle w-50 mb-3"
+            />
+            <h4>Promie Yutasane</h4>
+            <h5 class="text-muted">Instructor/Facilitator</h5>
+            <p class="team-text">
+              Promie is currently working as a Software Engineer at Hireup, a
+              tech company with an online platform that connects people with
+              disability with support workers. He has a very strong focus on
+              full stack development and currently using NodeJS, MongoDB,
+              GraphQL/Apollo, React and Vue. He is a part-time student at UNSW
+              studying Masters of IT specialising in Artificial Intelligence and
+              E-Commerce Systems. Promie spends his spare time mentoring new
+              programmers at Code.Sydney. As one of the pioneer mentors, Promie
+              has introduced standardised processes around GitHub code
+              submission among developers. He is also the chief evangelist of
+              Vue JS in Code.Sydney.
+            </p>
+            <div class="d-flex justify-content-center">
+              <div class="p-4">
+                <a
+                  href="https://www.linkedin.com/in/promie-yutasane-74a024140/"
+                  target="_blank"
+                >
+                  <i class="fab fa-linkedin"></i>
+                </a>
               </div>
             </div>
           </div>
         </div>
-
       </div>
     </div>
+  </div>
+</section>
 
-  </section>
-
-<h3 style="margin-left:100px; color: gray">Vue Leaderboard</h3>
+<h3 style="margin-left: 100px; color: gray;">Vue Leaderboard</h3>
 <p>
-  <a href="{{ url_for('vueleaderboardlogin') }}" style="font-size:15px;color:rgb(58, 179, 78);margin-left:100px"><u>Login</u></a>
-  <a href="{{ url_for('vueleaderboardregister') }}" style="font-size:15px;color:rgb(58, 179, 78);margin-left:5px"><u>Register</u></a>
+  <a
+    href="{{ url_for('vueleaderboardlogin') }}"
+    style="font-size: 15px; color: rgb(58, 179, 78); margin-left: 100px;"
+    ><u>Login</u></a
+  >
+  <a
+    href="{{ url_for('vueleaderboardregister') }}"
+    style="font-size: 15px; color: rgb(58, 179, 78); margin-left: 5px;"
+    ><u>Register</u></a
+  >
 </p>
 
 <div>
-  <table style="font-size:17px;width:76%;text-align:left;font-weight:normal;margin-left:100px" border="0">
-  <tr>
-    <th>Camper</th>
-    <th>Progress</th>
-  </tr>       
-  <tr>
-    <th></th>
-    <th>▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥</th>
-  </tr>    
-  {% for fccampers in fccamperslist %}
-  <tr>
-    <td>{% print fccampers[0] %}</td>
-    <td>{% print fccampers[1] %}</td>
-  </tr>
-  {% endfor %}               
+  <table
+    style="
+      font-size: 17px;
+      width: 76%;
+      text-align: left;
+      font-weight: normal;
+      margin-left: 100px;
+    "
+    border="0"
+  >
+    <tr>
+      <th>Camper</th>
+      <th>Progress</th>
+    </tr>
+    <tr>
+      <th></th>
+      <th>▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥▩▥</th>
+    </tr>
+    {% for fccampers in fccamperslist %}
+    <tr>
+      <td>{% print fccampers[0] %}</td>
+      <td>{% print fccampers[1] %}</td>
+    </tr>
+    {% endfor %}
   </table>
-</div>  
+</div>
 
-  <div class="spacing"></div>
+<div class="spacing"></div>
 
-  <script src="static/js/jquery.min.js"></script>
-  <script src="static/bootstrap/js/bootstrap.min.js"></script>
-  <script src="static/js/smart-forms.min.js"></script>
-  <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
-  <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
-  <!-- Contact Ends -->
+<script src="static/js/jquery.min.js"></script>
+<script src="static/bootstrap/js/bootstrap.min.js"></script>
+<script src="static/js/smart-forms.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+<!-- Contact Ends -->
 
 {% endblock content %}
