--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,45 +1,57 @@
 <nav class="navbar navbar-expand-md navbar-light fixed-top py-4" id="main-nav">
-<div class="container">
-  <a href="{{ url_for('index') }}" class="navbar-brand">
-    <img src="{{ url_for('static', filename='img/logo.png') }}" width="50" height="50" alt="">
-    <h3 class="d-inline align-middle">Code.Sydney</h3>
-  </a>
-  <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <div class="container">
+    <a href="{{ url_for('index') }}" class="navbar-brand">
+      <img
+        src="{{ url_for('static', filename='img/logo.png') }}"
+        width="50"
+        height="50"
+        alt=""
+      />
+      <h3 class="d-inline align-middle">Code.Sydney</h3>
+    </a>
+    <button
+      class="navbar-toggler"
+      data-toggle="collapse"
+      data-target="#navbarCollapse"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  {% if messages %}
-  {% else %}
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a href="{{ url_for('index') }}" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item">
-        <a href="{{ url_for('awards') }}"  class="nav-link">Awards</a>
-      </li>
-      <li class="nav-item">
-        <a href="{{ url_for('testimonials') }}" class="nav-link">Testimonials</a>
-      </li>
-      <!--
+    {% if messages %} {% else %}
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a href="{{ url_for('index') }}" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="{{ url_for('awards') }}" class="nav-link">Awards</a>
+        </li>
+        <li class="nav-item">
+          <a href="{{ url_for('testimonials') }}" class="nav-link"
+            >Testimonials</a
+          >
+        </li>
+        <!--
       <li class="nav-item">
         <a href="{{ url_for('fellowship') }}" class="nav-link">Fellowship</a>
       </li>
       -->
-      <li class="nav-item">
-        <a href="{{ url_for('newsletter') }}" class="nav-link">Newsletter</a>
-      </li>
+        <li class="nav-item">
+          <a href="{{ url_for('newsletter') }}" class="nav-link">Newsletter</a>
+        </li>
+        <!--
       <li class="nav-item">
         <a href="{{ url_for('microbootcamp') }}" class="nav-link">Vue</a>
       </li>
-      <li class="nav-item">
-        <a href="{{ url_for('fccleaderboard') }}" class="nav-link">Campers</a>
-      </li>
-      <li class="nav-item">
-        <a href="{{ url_for('contact') }}" class="nav-link">Contact</a>
-      </li>
-    </ul>
+      -->
+        <li class="nav-item">
+          <a href="{{ url_for('fccleaderboard') }}" class="nav-link">Campers</a>
+        </li>
+        <li class="nav-item">
+          <a href="{{ url_for('contact') }}" class="nav-link">Contact</a>
+        </li>
+      </ul>
+    </div>
+    {% endif %}
   </div>
-  {% endif %}
-</div>
 </nav>
