--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -38,6 +38,10 @@
         </thead>
         <tbody>
             <tr>
+              <td>July 2020</a></td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_July_2020.pdf') }}" target="_blank">The Hexagon July 2020</a></td>
+            </tr>
+            <tr>
               <td>June 2020</a></td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_June_2020.pdf') }}" target="_blank">The Hexagon June 2020</a></td>
             </tr>
