--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -38,6 +38,10 @@
         </thead>
         <tbody>
             <tr>
+              <td>September 2020</a></td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_September_2020.pdf') }}" target="_blank">The Hexagon September 2020</a></td>
+            </tr>
+            <tr>
               <td>August 2020</a></td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_August_2020.pdf') }}" target="_blank">The Hexagon August 2020</a></td>
             </tr>
